chapter11/enforce-ingress-vap/vap-binding-ingress.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "vap-binding-ingress"
spec:
  policyName: "vap-ingress"
  validationActions: [Deny]
